--- a/Ember-Client/pi-timeswitch/app/templates/pins.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/pins.hbs
@@ -1,5 +1,4 @@
-<h3 id="title">Pins</h3>
-
+<br/>
 <table id="pinTable">
   <thead>
     <tr>
@@ -35,13 +34,13 @@
         {{input type="text" 
           value=id
           placeholder="Pin"
-          action="addPin"}}
+          enter="addPin"}}
       </td><td class="borderedCell">
         {{input
           type="text"
           value=name
           placeholder="Name"
-          action="addPin"}}
+          enter="addPin"}}
       </td>
       <td></td>
     </tr>
