--- a/Ember-Client/pi-timeswitch/app/templates/about.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/about.hbs
@@ -1,3 +1,2 @@
-<h3 id="title">About Pi-Timeswitch</h3>
 
-<div>Need text here!</div>
+<p>Nav bar taken from: <a href="http://css-snippets.com/simple-horizontal-navigation/">CSS Snippets</a></p>
