--- a/Ember-Client/pi-timeswitch/app/templates/pins/pin.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/pins/pin.hbs
@@ -1,7 +1,3 @@
-<h4 id="title">Pin</h4>
-
-
-
 <h2>{{name}}</h2>
 <table id="timeTable">
   <thead>
@@ -74,24 +70,24 @@
           type="text" 
           value=fromTm 
           placeholder="von" 
-          action="addTime"}}
+          enter="addTime"}}
       </td><td class="borderedCell">
         {{input type="text" 
           value=fromRange 
           placeholder="streuung" 
-          action="addTime"}}
+          enter="addTime"}}
       </td><td class="borderedCell">
         {{input 
           type="text" 
           value=toTm
           placeholder="bis"
-          action="addTime"}}
+          enter="addTime"}}
       </td><td class="borderedCell">
         {{input 
           type="text" 
           value=toRange
           placeholder="streuung"
-          action="addTime"}}
+          enter="addTime"}}
       </td>
   </tbody>
 </table>
