added adapter for communication with Flask

--- a/Ember-Client/pi-timeswitch/app/templates/pins/pin.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/pins/pin.hbs
@@ -66,24 +66,24 @@
           type="text" 
           value=fromTm 
           placeholder="von" 
-          enter="addTime"}}
+          enter="addSequence"}}
       </td><td class="borderedCell">
         {{input type="text" 
           value=fromRange 
           placeholder="streuung" 
-          enter="addTime"}}
+          enter="addSequence"}}
       </td><td class="borderedCell">
         {{input 
           type="text" 
           value=toTm
           placeholder="bis"
-          enter="addTime"}}
+          enter="addSequence"}}
       </td><td class="borderedCell">
         {{input 
           type="text" 
           value=toRange
           placeholder="streuung"
-          enter="addTime"}}
+          enter="addSequence"}}
       </td>
   </tbody>
 </table>
