added Flask Badge, using Marshmallo-jsonapi for JSON API

--- a/Ember-Client/pi-timeswitch/app/templates/application.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/application.hbs
@@ -15,4 +15,9 @@
     {{#link-to "about"}}
         <img src="assets/images/Wappen.png" width="25" hight="25">
     {{/link-to}}
+    <a href="http://flask.pocoo.org/"><img
+   src="http://flask.pocoo.org/static/badges/made-with-flask-s.png"
+   border="0"
+   alt="made with Flask"
+   title="made with Flask"></a>
 </div>
