--- a/Ember-Client/pi-timeswitch/app/templates/components/pin-input.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/components/pin-input.hbs
@@ -1,6 +1,6 @@
 <td></td>
 <td class="borderedCell">
-  {{input type="text" value=id placeholder="Pin" enter="addPin"}}
+  {{input type="text" value=pin_num placeholder="Pin" enter="addPin"}}
 </td><td class="borderedCell">
   {{input type="text" value=name placeholder="Name" enter="addPin"}}
 </td>
