adding and removing sequences

--- a/Ember-Client/pi-timeswitch/app/templates/pins/pin.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/pins/pin.hbs
@@ -11,9 +11,9 @@
   </thead>
   <tbody>
     {{#each model.sequences as |sequence|}}
-      {{sequence-row sequence=sequence updateSequence="updateSequence" 
-      deleteSequence="deleteSequence"}}
+      {{sequence-row sequence=sequence 
+      updateSequence="updateSequence" deleteSequence="deleteSequence"}}
     {{/each}}
-    {{sequence-input action="createSequence"}}
+    {{sequence-input pin=model.pin action="createSequence"}}
   </tbody>
 </table>
