updated README, added TODO for TimeSwitch Modul, improved website
Removed a bug in the TimeSwitch model where sequences where not
correctly created.
Improved REST-API

--- a/Ember-Client/pi-timeswitch/app/templates/components/pin-row.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/components/pin-row.hbs
@@ -1,6 +1,6 @@
 <td>{{pin.state}}</td>
 <td class="numeric">
-    {{#link-to "pins.pin" pin.pinNum}}{{pin.pinNum}}{{/link-to}}
+    {{#link-to "pins.pin" pin}}{{pin.pinNum}}{{/link-to}}
 </td>
     {{#if editing}}
         <td class="borderedCell">
