removed some bugs

--- a/Ember-Client/pi-timeswitch/app/templates/about.hbs
+++ b/Ember-Client/pi-timeswitch/app/templates/about.hbs
@@ -1,2 +1,4 @@
 
-<p>Nav bar taken from: <a href="http://css-snippets.com/simple-horizontal-navigation/">CSS Snippets</a></p>
+<p>Nav bar taken from:
+  <a href="http://css-snippets.com/simple-horizontal-navigation/">CSS Snippets</a>
+</p>
