Changed project structure (Client)

--- a/Client/src/components/main-page/main-page.html
+++ b/Client/src/components/main-page/main-page.html
@@ -4,3 +4,5 @@
 <ul data-bind="foreach: pins" class="list-group">
 	<li class="list-group-item" data-bind="text: name"></li>
 </ul>
+
+<a href="#/pins">Show the second page</a>.
