removed bower. improved model (add/remove pins)

--- a/Client/src/components/add-pin-fragment/add-pin-fragment.html
+++ b/Client/src/components/add-pin-fragment/add-pin-fragment.html
@@ -1,9 +1,7 @@
 <div class="fragment">
-	<input placeholder="From Time" data-bind="textInput: fromTime"/><br>
-	<input placeholder="From Range" data-bind="textInput: fromRange"/><br>
-	<input placeholder="End Time" data-bind="textInput: endTime"/><br>
-	<input placeholder="End Range" data-bind="textInput: endRange"/><br>
-	<button>cancle</button>
-	<button>Add sequence</button>
-</div>
+	<input placeholder="Name" data-bind="textInput: name"/><br>
+	<input placeholder="Number" data-bind="textInput: number"/><br>
 
+	<button data-bind="click: cancle">cancle</button>
+	<button data-bind="click: addPin">Add Pin</button>
+</div>
