--- a/Client/src/components/pins-fragment/pins-fragment.html
+++ b/Client/src/components/pins-fragment/pins-fragment.html
@@ -9,7 +9,7 @@
             </tr>
         </thead>
         <tbody data-bind="foreach: pins">
-            <tr data-bind="click: $parent.pinClicked">
+            <tr data-bind="click: $parent.pinClicked, clickBubble: false">
                 <td data-bind="text: state"></td>
                 <td class="numeric" data-bind="text: number"></td>
                 <td data-bind="text: name"></td>
@@ -19,5 +19,5 @@
             </tr>
         </tbody>
     </table>
-    <a href="#/pins/add">add pin!</a>
+    <button onclick="window.location.href='#/pins/add'">add pin!</button>
 </div>
