--- a/Client/src/components/pins-fragment/pins-fragment.html
+++ b/Client/src/components/pins-fragment/pins-fragment.html
@@ -10,7 +10,9 @@
         </thead>
         <tbody data-bind="foreach: pins">
             <tr data-bind="click: $parent.pushPin, clickBubble: false">
-                <td data-bind="text: state"></td>
+                <td data-bind="text: state">
+                    
+                </td>
                 <td class="numeric" data-bind="text: number"></td>
                 <td data-bind="text: name"></td>
                 <td>
