minor style changes

--- a/Client/src/components/add-pin-fragment/add-pin-fragment.html
+++ b/Client/src/components/add-pin-fragment/add-pin-fragment.html
@@ -1,4 +1,5 @@
 <div class="fragment">
+	<h3>Add Pin</h3>
 	<input placeholder="Name" data-bind="textInput: name"/><br>
 	<input placeholder="Number" data-bind="textInput: number"/><br>
 
