--- a/Client/src/components/pins-fragment/pins-fragment.html
+++ b/Client/src/components/pins-fragment/pins-fragment.html
@@ -4,16 +4,12 @@
     <tbody data-bind="foreach: pins">
         <tr data-bind="click: $parent.pushPin, clickBubble: false, css: {'highlight': $parent.selected()==id}">
           <td>
-          	<button class="image" data-bind="click: $parent.pushSwitchState, clickBubble: false">
-            	<img data-bind="attr: {src: stateImage}" width="20">
-            </button>
+            <input class="imgButton" type="image" data-bind="click: $parent.pushSwitchState, clickBubble: false, attr: {src: stateImage}" width="20" />
           </td>
           <td class="numeric" data-bind="text: number"></td>
           <td data-bind="text: name"></td>
           <td>
-            <button class="destroy" data-bind="click: $parent.pushRemove, clickBubble: false" >
-            	<img src="/images/delete.svg" width="15">
-            </button>
+            <input class="destroy" type="image" src="/images/delete.svg" width="20" height="20" data-bind="click: $parent.pushRemove, clickBubble: false" />
           </td>
         </tr>
     </tbody>
