--- a/Client/src/components/header/header.html
+++ b/Client/src/components/header/header.html
@@ -1,7 +1,7 @@
 <div class="nav">
     <ul>
-        <li class="icon"><a data-bind="click: pushLogo, clickBubble: false"><img src="images/favicons/android-chrome-192x192.png"></a></li>
-        <li>Pi-Timeswitch</li>
+        <li class="icon"><a data-bind="click: pushLogo, clickBubble: false"><img src="images/logo.png"></a></li>
+        <li></li>
         <li class="info"><button data-bind="click: pushLogout, clickBubble: false">Logout</button></li>
     </ul>
 </div>
