--- a/Client/src/css/styles.css
+++ b/Client/src/css/styles.css
@@ -41,12 +41,15 @@ h3 {
 }
 
 .nav li img {
-	height: 47px;
-	position: relative;
-	bottom: 0px;
+	height: 40px;
+	padding: 0;
+	margin: 0;
 }
 
 .nav li.icon {
+	padding: 0;
+	padding-left: 10px;
+	margin: 0;
 	float: left;
 }
 
