--- a/Client/src/components/main-page/main-page.html
+++ b/Client/src/components/main-page/main-page.html
@@ -1,8 +1,10 @@
 <h1 class="page-header" data-bind="text: title"></h1>
 
 <p>These Pins are currently on:</p>
-<ul data-bind="foreach: pins" class="list-group">
+<ul data-bind="foreach: pinsOn" class="list-group">
 	<li class="list-group-item" data-bind="text: name"></li>
 </ul>
 
-<a href="#/pins">Show the second page</a>.
+<a href="#/pins">Show pins page</a>.
+<br />
+<a href="#/users">Show users page</a>.
